RESOLVED FIXED120864
Fix fastMalloc/delete mismatches in CSS parser
https://bugs.webkit.org/show_bug.cgi?id=120864
Summary Fix fastMalloc/delete mismatches in CSS parser
Anders Carlsson
Reported 2013-09-06 10:17:01 PDT
Fix fastMalloc/delete mismatches in CSS parser
Attachments
Patch (1.75 KB, patch)
2013-09-06 10:21 PDT, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-09-06 10:21:20 PDT
Anders Carlsson
Comment 2 2013-09-06 10:33:38 PDT
Note You need to log in before you can comment on or make changes to this bug.